--- a/part3/simulate-observer/index.html
+++ b/part3/simulate-observer/index.html
@@ -17,13 +17,16 @@
         <input type="text" v-model="msg">
         <input type="text" v-model="count">
     </div>
+    <script src="./js/observer.js"></script>
+    <script src="./js/compiler.js"></script>
     <script src="./js/vue.js"></script>
     <script>
         let vm = new Vue({
             el:'#app',
             data:{
                 msg:'hello VUE',
-                count:100
+                count:100,
+                person:{name:'umbraCi'}
             }
         })
     </script>
