--- a/part3/03-composition-api/01-createApp.html
+++ b/part3/03-composition-api/01-createApp.html
@@ -9,12 +9,12 @@
 
 <body>
     <div id="app">
-        x :{{position.x}}<br>
-        y:{{position.y}}
+        x :{{x}}<br>
+        y:{{y}}
     </div>
 
     <script type="module">
-        import { createApp, reactive, onMounted, onUnmounted } from './node_modules/vue/dist/vue.esm-browser.js';
+        import { createApp, reactive, onMounted, onUnmounted ,toRefs } from './node_modules/vue/dist/vue.esm-browser.js';
 
         function useMousePosition() {
             //第一个参数props，第二个参数context,具有三个成员attrs、emit、slots
@@ -25,7 +25,7 @@
             })
             const update = (e) => {
                 position.x = e.pageX
-                position.y = e.pageY
+                position.y = e.pageY 
             }
             onMounted(() => {
                 window.addEventListener('mousemove', update)
@@ -33,21 +33,23 @@
             onUnmounted(() => {
                 window.removeEventListener('mousemove', update)
             })
-            return position
+            //toRefs可以把一个代理对象的所有属性的值都转换成响应式的
+            return toRefs(position)
         }
 
         const app = createApp({
             setup() {
-                const position = useMousePosition()
+                //解构以后x,y不是响应式数据
+                const { x,y } = useMousePosition()
                 return {
-                    position
+                    x,y
                 }
             },
-            mounted() {
-                //组件被创建完毕之后，会调用mounted函数，所以此时可以访问this
-                this.position.x = 100;
-                this.position.y = 100;
-            }
+            // mounted() {
+            //     //组件被创建完毕之后，会调用mounted函数，所以此时可以访问this
+            //     this.position.x = 100;
+            //     this.position.y = 100;
+            // }
         })
         console.log(app)
         app.mount('#app')
